# SNIP

./: CMakeLists.txt  LICENSE  README.md  client1_test.cpp  client2_test.cpp  server_test.cpp
include/: snip.hpp
